--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+export SECRET_KEY='P0726878834P'
+export MAIL_USERNAME='ali.mohamed@student.moringaschool.com'
+export MAIL_PASSWORD='2345678'
+
+
 python3 manage.py server
