push to heroku master

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-export SECRET_KEY='P0726878834P'
+export SECRET_KEY='069813'
 export MAIL_USERNAME='ali.mohamed@student.moringaschool.com'
-export MAIL_PASSWORD='2345678'
-
+export MAIL_PASSWORD='maalim2345678'
 
 python3 manage.py server
